<resources>
    <string name="app_name">Petagram</string>

    <string name="titulo_acerca_de">Acerca de</string>
    <string name="texto_bio_desarrollador">Soy Evana, una desarrolladora de apps móviles.</string>

    <string name="titulo_configurar_cuenta">Configurar Cuenta</string>
    <string name="placeholder_configurar_cuenta">Escribe tu usuario</string>
    <string name="configurar_cuenta_instrucciones">NOTA: Los valores posibles son _pelusoo, xevixmp, marilynferetrius</string>
    <string name="configurar_cuenta_btn">Guardar cuenta</string>


    <!-- Pantalla Contacto  -->
    <!-- Placeholders -->
    <string name="titulo_contacto">Contacto</string>
    <string name="ph_nombre_completo">Nombre</string>
    <string name="ph_email">Email</string>
    <string name="ph_descripcion">Mensaje</string>
    <string name="btn_siguiente">Enviar Comentario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_perfil">Tiny</string>
    <string name="likes">Likes</string>
    <string name="plikes">0</string>

    <!-- Notificaciones -->
    <string name="recibir_notificaciones">Recibir Notificaciones</string>
    <string name="lanzar_notificacion">Lanzar Notificación</string>
</resources>
