<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ConfigurarCuenta">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/miActionBar"
        >


        <TextView
            android:id="@+id/tv_titulo_acerca_de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/titulo_configurar_cuenta"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <EditText
            android:id="@+id/et_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_configurar_cuenta"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_titulo_acerca_de"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configurar_cuenta_instrucciones"/>

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configurar_cuenta_btn"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>
</RelativeLayout>
